--- a/batman/public/html/fact/list.html
+++ b/batman/public/html/fact/list.html
@@ -4,8 +4,8 @@
 <section>
     <form>
         类型：<select name = "field" ng-model="choose">
-        <option ng-repeat="field     in fields" value="{{field}}">{{field}}</option>
-    </select>
+        <option ng-repeat="field in fields1" value="{{field}}">{{field}}</option>
+              </select>
         关键字 : <input type="text" name="keyword" ng-model="keyWord"/>
         <a ng-click="search()">搜索</a>
     </form>
@@ -13,7 +13,7 @@
 <section>
     <ul>
         <li><a  ng-click = "new()">新建</a></li>
-        <li><a ng-click = "del()"   >批量删除</a></li>
+        <li><a ng-click = "del()">批量删除</a></li>
     </ul>
     <select name="type">
         <option value="0">请选择排序字段</option>
