--- a/batman/public/html/fact/list.html
+++ b/batman/public/html/fact/list.html
@@ -39,7 +39,7 @@
             <td>{{action.content}}</td>
             <td>{{action.node_name}}</td>
             <td>{{action.person}}</td>
-            <td><a ng-href="/#/problem/update/{{action._id}}">编辑</a><a ng-click="remove($index)">删除</a><show item="action"></show></td>
+            <td><a ng-href="/#/fact/update/{{action._id}}">编辑</a><a ng-click="remove($index)">删除</a><show item="action"></show></td>
         </tr>
     </table>
 </section>
