--- a/batman/public/html/net/list.html
+++ b/batman/public/html/net/list.html
@@ -32,7 +32,7 @@
             <td><input type="checkbox"  ng-model="action.flag"></td>
             <td>{{action.result}}</td>
             <td>{{action.count}}</td>
-            <td><a ng-href="/#/net/update/{{action._id}}">编辑</a><a ng-click="remove($index)">删除</a><show item="action"></show></td>
+            <td><a ng-href="/#/net/update/{{action._id}}">编辑</a><a ng-click="remove($index)">删除</a><shownet item="action"></shownet></td>
        </tr>
     </table>
 </section>
