--- a/batman/public/html/fact/new.html
+++ b/batman/public/html/fact/new.html
@@ -9,12 +9,12 @@
            <label for="id">编号: </label>
            <input type="text" name = "id" id = "id" ng-model = "action.id" />
         </div>
-        <div>
-            <label for="node_name">问题节点: </label>
-            <select ng-model="action.node_name"  name = "node_name">
-                <option ng-repeat="opt in p_opts" value="{{opt.title}}">{{opt.title}}</option>
-            </select>
-        </div>
+            <div ng-repeat="item_node in action.node_name">
+                <label for="node_name">问题节点: </label>
+                <select ng-model="item_node.name"  name = "node_name">
+                    <option ng-repeat="opt in p_opts" value="{{opt.title}}" sel>{{opt.title}}</option>
+                </select>
+            </div>
         <div>
             <label for="department">部门:</label>
             <input type="text" name = "department"  id = "departmente" ng-model = "action.department"/>
@@ -58,6 +58,7 @@
             </trees>
         </div>
         <div class="tree_footer">
+            <a  ng-click = "add_pro()">添加问题节点</a>
             <a  ng-click = "save()">提交</a>
         </div>
     </form>
